GH-952: Fix for Java8 compatibility.